Bug 212355 - Shortcuts to move and copy contacts do not work.
Summary: Shortcuts to move and copy contacts do not work.
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-30 06:42 UTC by Sabine Faure
Modified: 2009-11-01 21:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-10-30 06:42:16 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch Kontact and go to KAB
- Create two address book (AB1 and AB2)
- Create a new contact in AB1 (ex: John Smith)
- Select it and try to copy it to AB2 by drag and drop while holding the Ctrl key.

The contact should be copied into AB2 but instead a pop up dialogue asks to select between moving or copying the contact.

- The same happens when trying to move the contact by drag and drop while holding the Shift key.

The contact should be moved into AB2 but instead a pop up dialogue asks to select between moving or copying the contact. 

And until the user chooses again nothing happens.
So it seems that the shortcuts do not work.

Trunk, Svn Rev 1042371
Comment 1 Tobias Koenig 2009-10-30 20:01:31 UTC
SVN commit 1042809 by tokoe:

Allow the user to pre-select a drag'n'drop action by using modifier keys

BUG: 212355


 M  +58 -21    dragdropmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1042809
Comment 2 Sabine Faure 2009-11-01 21:12:50 UTC
It is corrected now.

Using the shortcuts in addition to drag and drop to copy or move a contact to another folder works now.

Trunk, Svn Rev 1043144