Allow the user to pre-select a drag'n'drop action by using modifier keys

BUG: 212355

svn path=/trunk/KDE/kdepimlibs/; revision=1042809